--- a/src/pages/consult/consult.scss
+++ b/src/pages/consult/consult.scss
@@ -8,6 +8,21 @@
 @import "~taro-ui/dist/style/components/tab-bar.scss";
 @import "~taro-ui/dist/style/components/badge.scss";
 @import "~taro-ui/dist/style/components/fab.scss";
+@import "~taro-ui/dist/style/components/button.scss";
+@import "~taro-ui/dist/style/components/loading.scss";
+@import "~taro-ui/dist/style/components/toast.scss";
+.controls {
+  position: absolute;
+  top: 1000px;
+  height: 350px;
+}
+.dailog {
+  position: absolute;
+  padding-left: 5%;
+  width: 90%;
+  top: 300px;
+  height: 350px;
+}
 .content-page{
   margin-left: 2%;
   width: 96%;
@@ -82,7 +97,7 @@
   text-align: center;
 }
 .imageslogan {
-  width: 90%;
+  width: 100%;
 }
 .text {
   opacity: 1;
