--- a/src/pages/consult/consult.scss
+++ b/src/pages/consult/consult.scss
@@ -2,14 +2,20 @@
 @import "~taro-ui/dist/style/components/icon.scss";
 @import "~taro-ui/dist/style/components/button.scss";
 @import "~taro-ui/dist/style/components/toast.scss";
-.bg {
+.index{
   position: absolute;
-  height: 100%;
+  z-index: -10;
+}
+.bg {
+  position: relative;
+  height: 1529px;
+  z-index: -1;
 }
 .controls {
   position: absolute;
   top: 1000px;
   height: 350px;
+  z-index: 10;
 }
 .dailog {
   position: absolute;
@@ -17,4 +23,5 @@
   width: 90%;
   top: 300px;
   height: 350px;
+  z-index: 10;
 }
