--- a/src/pages/detail/detail.scss
+++ b/src/pages/detail/detail.scss
@@ -1,4 +1,5 @@
 
+@import "~taro-ui/dist/style/components/nav-bar.scss";
 @import "~taro-ui/dist/style/components/icon.scss";
 @import "~taro-ui/dist/style/components/button.scss";
 @import "~taro-ui/dist/style/components/toast.scss";
