--- a/src/pages/consult/consult.scss
+++ b/src/pages/consult/consult.scss
@@ -2,31 +2,29 @@
 @import "~taro-ui/dist/style/components/icon.scss";
 @import "~taro-ui/dist/style/components/button.scss";
 @import "~taro-ui/dist/style/components/toast.scss";
-.navigation-bar {
-  background-image: url('../../../img/consult.bg.jpg'); /* 替换为你的图片路径 */
-  background-size: cover;
-  background-position: center;
-}
+@import "~taro-ui/dist/style/components/textarea.scss";
+
 .index{
-  position: absolute;
-  z-index: -10;
+  background-image: url('../../../img/consult.bg.jpg');
+  width: 753rpx;
+  height: 1529rpx;
+  background-position: center;
+  background-size: cover;
 }
 .bg {
-  position: relative;
+  //position: relative;
   height: 1529px;
-  z-index: -1;
+  //z-index: -1;
 }
 .controls {
-  position: absolute;
+  //position: absolute;
   top: 1000px;
   height: 350px;
-  z-index: 10;
+  //z-index: 10;
 }
-.dailog {
-  position: absolute;
-  padding-left: 5%;
+.dailog{
+  padding-top: 100rpx;
   width: 90%;
-  top: 300px;
-  height: 350px;
-  z-index: 10;
+  padding-left: 5%;
+  height: 400px;
 }
